--- a/deploy_lambda/Dockerfile.worker
+++ b/deploy_lambda/Dockerfile.worker
@@ -12,4 +12,4 @@ RUN pip3 install --no-cache-dir wheel==0.38.4 pip==22.3.1 && \
 # Run the application:
 ENV PYTHONPATH=/
 COPY . /
-CMD ["python3", "fastchat/serve/backend_nat.py"]
+ENTRYPOINT ["/deploy_lambda/run_worker.sh"]
