--- a/deploy_lambda/Dockerfile.worker
+++ b/deploy_lambda/Dockerfile.worker
@@ -9,7 +9,13 @@ COPY requirements.txt .
 RUN pip3 install --no-cache-dir wheel==0.38.4 pip==22.3.1 && \
     pip3 install --no-cache-dir -r /requirements.txt
 
-# Run the application:
+# Create model
 ENV PYTHONPATH=/
 COPY . /
+RUN python3 fastchat/model/apply_delta.py \
+    --base-model-path decapoda-research/llama-13b-hf \
+    --target-model-path fastchat/code/FastChat/output_model \
+    --delta-path lmsys/vicuna-13b-delta-v1.1
+
+# Run the application:
 ENTRYPOINT ["/deploy_lambda/run_worker.sh"]
