--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,22 +2,18 @@ services:
   controller:
     build:
       context: .
-      dockerfile: deploy_lambda/Dockerfile.controller
-    image: nielsantosa/fastchat_controller
+      dockerfile: deploy_app/Dockerfile.controller
+        #image: nielsantosa/fastchat_controller
     restart: always
     ports:
       - 21001:21001
-  model_worker:
+  backend_nat:
     build:
       context: .
-      dockerfile: deploy_lambda/Dockerfile.worker
-    image: nielsantosa/fastchat_worker
+      dockerfile: deploy_app/Dockerfile.backend_nat
+        #image: nielsantosa/fastchat_backend_nat
     restart: always
     ports:
-      - 21002:21002
+      - 21010:21010
     environment:
-      - CONTROLLER_ADDRESS="http://controller"
-      - WORKER_ADDRESS="http://model_worker"
-    depends_on:
-      controller:
-        condition: service_started
+      - CONTROLLER_ADDRESS=http://controller:21001
