main: improve deployment files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,20 @@ services:
     restart: always
     ports:
       - 21001:21001
+  model_worker:
+    #build:
+    #  context: .
+    #  dockerfile: deploy_app/Dockerfile.worker
+    image: nielsantosa/fastchat_worker:v1
+    restart: always
+    ports:
+      - 21002:21002
+    environment:
+      - CONTROLLER_ADDRESS=http://controller:21001
+      - WORKER_ADDRESS=http://model_worker:21002
+    depends_on:
+      controller:
+        condition: service_started
   backend_nat:
     build:
       context: .
